--- a/lesson6/hw1/src/index.scss
+++ b/lesson6/hw1/src/index.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -5,6 +9,27 @@ body {
 #root {
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+
+.status {
+  border: 2px solid #000;
+  height: 32px;
+  border-radius: 16px;
+  overflow: hidden;
+
+  &__btn {
+    height: 100%;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
+    padding: 0 8px;
+  }
+
+  &__text {
+    padding: 0 8px;
+    line-height: 28px;
+  }
 }
