--- a/lesson14/task2/src/index.scss
+++ b/lesson14/task2/src/index.scss
@@ -6,9 +6,54 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#root {
+.page {
+  width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+  }
+}
+
+.navigation {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  &__item {
+    margin: 8px;
+  }
+}
+
+.user {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
   align-items: center;
+
+  &__avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+  }
+
+  &__info {
+    text-align: center;
+    font-size: 24px;
+    margin: 32px;
+  }
+
+  &__name {
+    font-weight: 700;
+  }
+
+  &__location {
+    opacity: 0.5;
+    margin-left: 16px;
+  }
 }
