--- a/lesson14/hw2/src/index.scss
+++ b/lesson14/hw2/src/index.scss
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -9,6 +5,30 @@ body {
 #root {
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.clock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 120px;
+
+  &__location {
+    text-transform: uppercase;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    margin-bottom: 8px;
+    font-weight: 700;
+  }
+
+  &__time {
+    border: 3px solid #ff7f50;
+    border-radius: 8px;
+    padding: 8px;
+    text-align: center;
+  }
 }
